Everything for payment is just ready

--- a/src/components/DepositAmountPopUp/styles.module.scss
+++ b/src/components/DepositAmountPopUp/styles.module.scss
@@ -1,265 +1,288 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
-.blur{
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba($color: #000000, $alpha: 0.5);
-    z-index: 9;
+.blur {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba($color: #000000, $alpha: 0.5);
+  z-index: 9;
 }
-body{
-    position: relative;
+body {
+  position: relative;
 }
-.root{
-    z-index: 10;
-    display: flex;
-    color: #0000;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    height: 100%;
+.root {
+  z-index: 10;
+  display: flex;
+  color: #0000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100%;
 }
-.contentWrapper{
-    position: sticky;
-    position: -webkit-sticky;
-    bottom: 0;
-    background-color: #ffffff;
-    border-radius: 0.43rem;
-    width: 76.643rem;
-    overflow: hidden;
-    margin: auto;
+.contentWrapper {
+  position: sticky;
+  position: -webkit-sticky;
+  bottom: 0;
+  background-color: #ffffff;
+  border-radius: 0.43rem;
+  width: 76.643rem;
+  overflow: hidden;
+  margin: auto;
 }
-.header{
-    padding: 1rem 2.85rem;
-    background: $primary;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
+.header {
+  padding: 1rem 2.85rem;
+  background: $primary;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
 }
-.main{
-    padding: 2.85rem;
-    display: flex;
-    justify-content: space-between;
-    color: #000;
+.main {
+  padding: 2.85rem;
+  display: flex;
+  justify-content: space-between;
+  color: #000;
 }
 
-.mainTitle{
-    font-size: 1.857rem;
-    margin: 0;
+.mainTitle {
+  font-size: 1.857rem;
+  margin: 0;
+  line-height: 1em;
+  font-weight: 500;
+}
+.formSection h6,
+.QRCodeWrapper h6,
+.title,
+.title2 {
+  color: $grey9;
+  font-size: 1.143rem;
+  margin: 0 0 1.2rem 0;
+}
+.title2 {
+  color: $primary;
+}
+.cardSectionn {
+  margin-bottom: 2.857rem;
+  color: #000;
+}
+.crossicon {
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 1em;
+  border-radius: 50%;
+  transition: 0.2s all;
+  position: relative;
+  right: -1em;
+  &:hover {
+    background: rgba($color: $lightGrey6, $alpha: 0.2);
+  }
+  &:active {
+    background: $lightGrey6;
+  }
+  span {
     line-height: 1em;
-    font-weight: 500;
-}
-.formSection h6, .QRCodeWrapper h6, .title, .title2{
-    color: $grey9;
-    font-size: 1.143rem;
-    margin: 0 0 1.2rem 0;
-}
-.title2{
-    color: $primary;
-}
-.cardSectionn{
-    margin-bottom: 2.857rem;
-    color: #000;
-}
-.crossicon{
-    font-size: 1rem;
-    cursor: pointer;
-    padding: 1em;
-    border-radius: 50%;
-    transition: 0.2s all;
-    position: relative;
-    right: -1em;
-    &:hover{
-        background: rgba($color: $lightGrey6, $alpha: 0.2);
-    }
-    &:active{
-        background: $lightGrey6;
-    }
-    span{
-        line-height: 1em;
-        width: 1em;
-        height: 1em;
-        display: block;
-        position: relative;
-        &::after, &::before{
-            content: '';
-            height: 100%;
-            position: absolute;
-            width: 0.072em;
-            background: #fff;
-            left: 50%;
-            top: 0;
-        }
-        &::after{
-            transform: rotate(45deg);
-        }
-        &::before{
-            transform: rotate(135deg);
-        }
-    }
-}
-.form{
-    width: initial;
-    max-width: initial;
-    margin: 0;
-}
-.formSection{
-    margin-bottom: 4.285rem;
-    color: #000;
-    >div{
-        display: flex;
-        >*{
-            margin-right: 0.7143rem;
-        }
-    }
-    .Coingate{
-        width: 4.285rem;
-        margin: auto 2.142rem;
-    }
-}
-.creditdebitcardImg{
-    width: 2.857rem;
-}
-.PayPal, .ECheck, .cvvImage, .cvvInput{
-    max-width: 5.714rem;
-}
-.BitCoin{
-    width: 3.428rem;
-}
-.cardDetails{
+    width: 1em;
+    height: 1em;
     display: block;
-    div{
-        justify-content: space-between;
-        display: flex;
-        margin-bottom: 0.3rem;
-    }
-    input{
-        border: solid 0.0714rem $lightGrey2;
-        border-radius: 0.142rem;
-        outline: none;
-        background: #fff;
-        display: block;
-        width: 100%;
-        padding: 0.7142rem 0 0.7142rem 5rem;
-        background: url('../../assets/visa.png') no-repeat 0.857rem center;
-        background-size: auto 0.929rem;
-        color: $lightBlack;
-    }
-    a{
-        color: $primary;
-    }
-}
-.buyCoinBtn, .submitbtn{
-    height: 3.6rem;
-    border-radius: 0.571rem;
-    font-weight: 600;
     position: relative;
-    color: #fff;
-    cursor: pointer;
-    overflow: hidden;
+    &::after,
+    &::before {
+      content: "";
+      height: 100%;
+      position: absolute;
+      width: 0.072em;
+      background: #fff;
+      left: 50%;
+      top: 0;
+    }
+    &::after {
+      transform: rotate(45deg);
+    }
+    &::before {
+      transform: rotate(135deg);
+    }
+  }
+}
+.form {
+  width: initial;
+  max-width: initial;
+  margin: 0;
+}
+.formSection {
+  margin-bottom: 4.285rem;
+  color: #000;
+  > div {
+    display: flex;
+    > * {
+      margin-right: 0.7143rem;
+    }
+  }
+  .Coingate {
+    width: 4.285rem;
+    margin: auto 2.142rem;
+  }
+}
+.creditdebitcardImg {
+  width: 2.857rem;
+}
+.PayPal,
+.ECheck,
+.cvvImage,
+.cvvInput {
+  max-width: 5.714rem;
+}
+.BitCoin {
+  width: 3.428rem;
+}
+.cardDetails {
+  display: block;
+  div {
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 0.3rem;
+  }
+  input {
+    border: solid 0.0714rem $lightGrey2;
+    border-radius: 0.142rem;
     outline: none;
-    margin-top: auto;
-    &::after, &::before{
-        content: '';
-        position: absolute;
-        width: 100%;
-        left: 0;
-        padding-top: 100%;
-        top: 50%;
-        transition: 0.2s all;
-        transform: translateY(-50%) scale(0);
-    }
-    &:hover::before{
-        background: rgba($color: #fff, $alpha: 0.05);
-        transform: translateY(-50%) scale(1);
-    }
-    &:active::after{
-        background: rgba($color: $primary, $alpha: 0.1);
-        transform: translateY(-50%) scale(1);
-    }
-}
-.submitbtn{
-    width: 22.14rem;
-    background: $primary;
-    border: 1px solid $primary;
-}
-.buyCoinBtn{
-    border: 1px solid;
-    color: #688fbd;
-    min-width: 16.43rem;
-    margin-right: auto;
-    background: transparent;
-}
-.QRCodeWrapper{
-    >div{
-        display: grid;
-        grid-template-columns: 10.857rem 1fr;
-        grid-gap: 2rem;
-        .qrImage{
-            grid-row: span 2;
-            width: 100%;
-        }
-    }
-}
-.inputField{
-    position: relative;
-    label{
-        line-height: 1em;
-        margin-bottom: 0.4em;
-        display: block;
-    }
-    input{
-        border: solid 0.0714rem $lightGrey2;
-        border-radius: 0.142rem;
-        outline: none;
-        background: #fff;
-        display: block;
-        width: 100%;
-        padding: 0.7142rem 1rem;
-        background-size: auto 0.929rem;
-        color: $lightBlack;
-        &:focus{
-            border-color: $primary;
-        }
-    }
-}
-.copyImage{
-    position: absolute;
-    z-index: 1;
-    top: 2.16rem;
-    right: 0.7142rem;
-    width: 1.428rem;
-    cursor: pointer;
-}
-.leftSection{
-    width: 18.27rem;
-    margin-right: 4rem;
-}
-.cvvImage{
-    margin-left: 1rem;
-}
-.currentBalanceTitle{
-    font-size: 2.571rem;
+    background: #fff;
+    display: block;
+    width: 100%;
+    padding: 0.7142rem 0 0.7142rem 1rem;
+    // background: url('../../assets/visa.png') no-repeat 0.857rem center;
+    background-size: auto 0.929rem;
+    color: $lightBlack;
+    margin-bottom: 10px;
+  }
+  select {
+    border: solid 0.0714rem $lightGrey2;
+    border-radius: 0.142rem;
+    outline: none;
+    background: #fff;
+    display: block;
+    width: 100%;
+    padding: 0.7142rem 0 0.7142rem 1rem;
+    // background: url('../../assets/visa.png') no-repeat 0.857rem center;
+    background-size: auto 0.929rem;
+    color: $lightBlack;
+    margin-bottom: 10px;
+  }
+  a {
     color: $primary;
-    font-weight: 700;
-    margin: 0;
+  }
+}
+.buyCoinBtn,
+.submitbtn {
+  height: 3.6rem;
+  border-radius: 0.571rem;
+  font-weight: 600;
+  position: relative;
+  color: #fff;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  margin-top: auto;
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    left: 0;
+    padding-top: 100%;
+    top: 50%;
+    transition: 0.2s all;
+    transform: translateY(-50%) scale(0);
+  }
+  &:hover::before {
+    background: rgba($color: #fff, $alpha: 0.05);
+    transform: translateY(-50%) scale(1);
+  }
+  &:active::after {
+    background: rgba($color: $primary, $alpha: 0.1);
+    transform: translateY(-50%) scale(1);
+  }
+}
+.submitbtn {
+  width: 22.14rem;
+  background: $primary;
+  border: 1px solid $primary;
+}
+.buyCoinBtn {
+  border: 1px solid;
+  color: #688fbd;
+  min-width: 16.43rem;
+  margin-right: auto;
+  background: transparent;
+}
+.QRCodeWrapper {
+  > div {
+    display: grid;
+    grid-template-columns: 10.857rem 1fr;
+    grid-gap: 2rem;
+    .qrImage {
+      grid-row: span 2;
+      width: 100%;
+    }
+  }
+}
+.inputField {
+  position: relative;
+  label {
     line-height: 1em;
+    margin-bottom: 0.4em;
+    display: block;
+  }
+  input {
+    border: solid 0.0714rem $lightGrey2;
+    border-radius: 0.142rem;
+    outline: none;
+    background: #fff;
+    display: block;
+    width: 100%;
+    padding: 0.7142rem 1rem;
+    background-size: auto 0.929rem;
+    color: $lightBlack;
+    &:focus {
+      border-color: $primary;
+    }
+  }
+}
+.copyImage {
+  position: absolute;
+  z-index: 1;
+  top: 2.16rem;
+  right: 0.7142rem;
+  width: 1.428rem;
+  cursor: pointer;
+}
+.leftSection {
+  width: 18.27rem;
+  margin-right: 4rem;
+}
+.cvvImage {
+  margin-left: 1rem;
+}
+.currentBalanceTitle {
+  font-size: 2.571rem;
+  color: $primary;
+  font-weight: 700;
+  margin: 0;
+  line-height: 1em;
 }
 
-.creditCardDetails{
-    margin: 5.3rem 0 2.857rem 0;
+.creditCardDetails {
+  margin: 5.3rem 0 2.857rem 0;
 }
 @media (max-height: 800px) {
-    .root{
-        position: absolute;
-        margin: 3rem 0;
-    }
-    .contentWrapper{
-        margin: auto auto 0 auto;
-        bottom: 3rem;
-    }
+  .root {
+    position: absolute;
+    margin: 3rem 0;
+  }
+  .contentWrapper {
+    margin: auto auto 0 auto;
+    bottom: 3rem;
+  }
 }
