--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -57,6 +57,10 @@ $grey12: #1f1f1f;
 $grey13: #ffffff80;
 $grey14: #e4e4e4;
 $grey15: #f2f2f2b3;
+$grey16: #b3b3b3;
+$grey17: #fefefe;
+$grey18: #f8f8f8;
+$grey19: #bdbdbd;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
