Live Standing model issue fixes

--- a/src/components/LiveStandings/index.module.scss
+++ b/src/components/LiveStandings/index.module.scss
@@ -8,6 +8,7 @@
   border-radius: 16px;
   display: flex;
   flex-direction: column;
+  height: 840px;
 
   .svg {
     display: flex;
@@ -62,7 +63,7 @@
     .body_table {
       display: flex;
       flex-direction: column;
-      height: 55vh;
+      height: 47vh;
       overflow: hidden scroll;
 
       &::-webkit-scrollbar {
@@ -161,6 +162,811 @@
             span {
               button {
                 background-color: $primary;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1900px) {
+  .container {
+    margin: 2em auto;
+    width: 65%;
+    padding: 0 30px;
+    height: 840px;
+
+    .svg {
+      margin-top: 47px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .header {
+      margin: 1em 0 2em 0;
+
+      .header_p {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      span {
+        color: $grey;
+        font-size: 16px;
+      }
+
+      .header_right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .divider {
+      height: 1px;
+      width: 100%;
+      background-color: $lightBlack5;
+      border: 1px solid $lightBlack5;
+    }
+
+    .body {
+      margin: 20px 0 0 0;
+
+      .body_header {
+        margin: 0 0 20px 0;
+      }
+
+      .body_table {
+        display: flex;
+        flex-direction: column;
+        height: 45vh;
+        overflow: hidden scroll;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: $black2;
+          border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $grey5;
+          width: 7px;
+          border-radius: 5px;
+        }
+
+        .table_header {
+          display: flex;
+          width: 99%;
+          justify-content: space-around;
+          background-color: $lightBlack5;
+          padding: 13px 0;
+          border-radius: 8px;
+
+          span {
+            flex: 1;
+            text-align: center;
+
+            &:first-child {
+              flex: 0.6;
+            }
+
+            &:nth-child(2) {
+              flex: 1;
+              text-align: left;
+            }
+          }
+        }
+
+        .table_content {
+          display: flex;
+          flex-direction: column;
+          width: 99%;
+
+          .table_row {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 11px 0;
+            background-color: $black;
+            border-radius: 8px;
+            margin: 8px 0;
+            font-size: 16px;
+            font-weight: normal;
+
+            span {
+              flex: 1;
+              text-align: center;
+
+              &:first-child {
+                flex: 0.6;
+              }
+
+              &:nth-child(2) {
+                flex: 1;
+                text-align: left;
+              }
+
+              .button_btn {
+                background-color: $lightBlue;
+                border: none;
+                outline: none;
+                min-width: 143px;
+                // height: 30px;
+                padding: 5px;
+                border-radius: 8px;
+                color: $black;
+                font-size: 14px !important;
+                font-family: Poppins !important;
+                font-weight: 600;
+                margin: 0;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              background-color: $primaryLight9;
+              color: $primary;
+              font-weight: 600;
+
+              span {
+                button {
+                  background-color: $primary;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1680px) {
+  .container {
+    margin: 2em auto;
+    width: 65%;
+    padding: 0 30px;
+    height: 840px;
+
+    .svg {
+      margin-top: 47px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .header {
+      margin: 1em 0 2em 0;
+
+      .header_p {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      span {
+        color: $grey;
+        font-size: 16px;
+      }
+
+      .header_right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .divider {
+      height: 1px;
+      width: 100%;
+      background-color: $lightBlack5;
+      border: 1px solid $lightBlack5;
+    }
+
+    .body {
+      margin: 20px 0 0 0;
+
+      .body_header {
+        margin: 0 0 20px 0;
+      }
+
+      .body_table {
+        display: flex;
+        flex-direction: column;
+        height: 55vh;
+        overflow: hidden scroll;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: $black2;
+          border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $grey5;
+          width: 7px;
+          border-radius: 5px;
+        }
+
+        .table_header {
+          display: flex;
+          width: 99%;
+          justify-content: space-around;
+          background-color: $lightBlack5;
+          padding: 13px 0;
+          border-radius: 8px;
+
+          span {
+            flex: 1;
+            text-align: center;
+
+            &:first-child {
+              flex: 0.6;
+            }
+
+            &:nth-child(2) {
+              flex: 1;
+              text-align: left;
+            }
+          }
+        }
+
+        .table_content {
+          display: flex;
+          flex-direction: column;
+          width: 99%;
+
+          .table_row {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 11px 0;
+            background-color: $black;
+            border-radius: 8px;
+            margin: 8px 0;
+            font-size: 16px;
+            font-weight: normal;
+
+            span {
+              flex: 1;
+              text-align: center;
+
+              &:first-child {
+                flex: 0.6;
+              }
+
+              &:nth-child(2) {
+                flex: 1;
+                text-align: left;
+              }
+
+              .button_btn {
+                background-color: $lightBlue;
+                border: none;
+                outline: none;
+                min-width: 143px;
+                // height: 30px;
+                padding: 5px;
+                border-radius: 8px;
+                color: $black;
+                font-size: 14px !important;
+                font-family: Poppins !important;
+                font-weight: 600;
+                margin: 0;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              background-color: $primaryLight9;
+              color: $primary;
+              font-weight: 600;
+
+              span {
+                button {
+                  background-color: $primary;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  .container {
+    margin: 2em auto;
+    width: 65%;
+    padding: 0 30px;
+    height: 780px;
+
+    .svg {
+      margin-top: 47px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .header {
+      margin: 1em 0 2em 0;
+
+      .header_p {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      span {
+        color: $grey;
+        font-size: 16px;
+      }
+
+      .header_right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .divider {
+      height: 1px;
+      width: 100%;
+      background-color: $lightBlack5;
+      border: 1px solid $lightBlack5;
+    }
+
+    .body {
+      margin: 20px 0 0 0;
+
+      .body_header {
+        margin: 0 0 20px 0;
+      }
+
+      .body_table {
+        display: flex;
+        flex-direction: column;
+        height: 55vh;
+        overflow: hidden scroll;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: $black2;
+          border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $grey5;
+          width: 7px;
+          border-radius: 5px;
+        }
+
+        .table_header {
+          display: flex;
+          width: 99%;
+          justify-content: space-around;
+          background-color: $lightBlack5;
+          padding: 13px 0;
+          border-radius: 8px;
+
+          span {
+            flex: 1;
+            text-align: center;
+
+            &:first-child {
+              flex: 0.6;
+            }
+
+            &:nth-child(2) {
+              flex: 1;
+              text-align: left;
+            }
+          }
+        }
+
+        .table_content {
+          display: flex;
+          flex-direction: column;
+          width: 99%;
+
+          .table_row {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 11px 0;
+            background-color: $black;
+            border-radius: 8px;
+            margin: 8px 0;
+            font-size: 16px;
+            font-weight: normal;
+
+            span {
+              flex: 1;
+              text-align: center;
+
+              &:first-child {
+                flex: 0.6;
+              }
+
+              &:nth-child(2) {
+                flex: 1;
+                text-align: left;
+              }
+
+              .button_btn {
+                background-color: $lightBlue;
+                border: none;
+                outline: none;
+                min-width: 143px;
+                // height: 30px;
+                padding: 5px;
+                border-radius: 8px;
+                color: $black;
+                font-size: 14px !important;
+                font-family: Poppins !important;
+                font-weight: 600;
+                margin: 0;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              background-color: $primaryLight9;
+              color: $primary;
+              font-weight: 600;
+
+              span {
+                button {
+                  background-color: $primary;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .container {
+    margin: 2em auto;
+    width: 65%;
+    padding: 0 30px;
+    height: 840px;
+
+    .svg {
+      margin-top: 57px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .header {
+      margin: 1em 0 2em 0;
+
+      .header_p {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      span {
+        color: $grey;
+        font-size: 16px;
+      }
+
+      .header_right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .divider {
+      height: 1px;
+      width: 100%;
+      background-color: $lightBlack5;
+      border: 1px solid $lightBlack5;
+    }
+
+    .body {
+      margin: 20px 0 0 0;
+
+      .body_header {
+        margin: 0 0 20px 0;
+      }
+
+      .body_table {
+        display: flex;
+        flex-direction: column;
+        height: 60vh;
+        overflow: hidden scroll;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: $black2;
+          border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $grey5;
+          width: 7px;
+          border-radius: 5px;
+        }
+
+        .table_header {
+          display: flex;
+          width: 99%;
+          justify-content: space-around;
+          background-color: $lightBlack5;
+          padding: 13px 0;
+          border-radius: 8px;
+
+          span {
+            flex: 1;
+            text-align: center;
+
+            &:first-child {
+              flex: 0.6;
+            }
+
+            &:nth-child(2) {
+              flex: 1;
+              text-align: left;
+            }
+          }
+        }
+
+        .table_content {
+          display: flex;
+          flex-direction: column;
+          width: 99%;
+
+          .table_row {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 11px 0;
+            background-color: $black;
+            border-radius: 8px;
+            margin: 8px 0;
+            font-size: 16px;
+            font-weight: normal;
+
+            span {
+              flex: 1;
+              text-align: center;
+
+              &:first-child {
+                flex: 0.6;
+              }
+
+              &:nth-child(2) {
+                flex: 1;
+                text-align: left;
+              }
+
+              .button_btn {
+                background-color: $lightBlue;
+                border: none;
+                outline: none;
+                min-width: 143px;
+                // height: 30px;
+                padding: 5px;
+                border-radius: 8px;
+                color: $black;
+                font-size: 14px !important;
+                font-family: Poppins !important;
+                font-weight: 600;
+                margin: 0;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              background-color: $primaryLight9;
+              color: $primary;
+              font-weight: 600;
+
+              span {
+                button {
+                  background-color: $primary;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1124px) {
+  .container {
+    margin: 2em auto;
+    width: 65%;
+    padding: 0 30px;
+    height: 740px;
+
+    .svg {
+      margin-top: 57px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .header {
+      margin: 1em 0 2em 0;
+
+      .header_p {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      span {
+        color: $grey;
+        font-size: 16px;
+      }
+
+      .header_right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    .divider {
+      height: 1px;
+      width: 100%;
+      background-color: $lightBlack5;
+      border: 1px solid $lightBlack5;
+    }
+
+    .body {
+      margin: 20px 0 0 0;
+
+      .body_header {
+        margin: 0 0 20px 0;
+      }
+
+      .body_table {
+        display: flex;
+        flex-direction: column;
+        height: 60vh;
+        overflow: hidden scroll;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: $black2;
+          border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $grey5;
+          width: 7px;
+          border-radius: 5px;
+        }
+
+        .table_header {
+          display: flex;
+          width: 99%;
+          justify-content: space-around;
+          background-color: $lightBlack5;
+          padding: 13px 0;
+          border-radius: 8px;
+
+          span {
+            flex: 1;
+            text-align: center;
+
+            &:first-child {
+              flex: 0.6;
+            }
+
+            &:nth-child(2) {
+              flex: 1;
+              text-align: left;
+            }
+          }
+        }
+
+        .table_content {
+          display: flex;
+          flex-direction: column;
+          width: 99%;
+
+          .table_row {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 11px 0;
+            background-color: $black;
+            border-radius: 8px;
+            margin: 8px 0;
+            font-size: 16px;
+            font-weight: normal;
+
+            span {
+              flex: 1;
+              text-align: center;
+
+              &:first-child {
+                flex: 0.6;
+              }
+
+              &:nth-child(2) {
+                flex: 1;
+                text-align: left;
+              }
+
+              .button_btn {
+                background-color: $lightBlue;
+                border: none;
+                outline: none;
+                min-width: 143px;
+                // height: 30px;
+                padding: 5px;
+                border-radius: 8px;
+                color: $black;
+                font-size: 14px !important;
+                font-family: Poppins !important;
+                font-weight: 600;
+                margin: 0;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              background-color: $primaryLight9;
+              color: $primary;
+              font-weight: 600;
+
+              span {
+                button {
+                  background-color: $primary;
+                }
               }
             }
           }
