Home page and MLB stats

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -864,6 +864,10 @@
               color: $primary;
               font-weight: bold;
             }
+
+            div {
+              margin-top: 15px;
+            }
           }
 
           .__note_style {
