--- a/src/pages/MLBLivePowerdFsScroeDetail/index.module.scss
+++ b/src/pages/MLBLivePowerdFsScroeDetail/index.module.scss
@@ -31,7 +31,7 @@
         align-items: flex-start;
         overflow: hidden scroll;
         position: relative;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
 
         &::-webkit-scrollbar {
@@ -53,7 +53,7 @@
             text-transform: capitalize;
 
             &.child_1 {
-              flex: 0.485;
+              flex: 0.685;
             }
 
             &.child_2 {
@@ -61,7 +61,7 @@
             }
 
             &.child_3 {
-              flex: 0.8;
+              flex: 0.7;
             }
 
             &.child_4 {
@@ -84,16 +84,16 @@
         .card_combine_row {
           display: flex;
           flex-direction: row;
+          justify-content: space-around;
           flex: 1;
-          justify-content: center;
-          align-items: center;
+          margin: 0 2.5px;
 
           span {
             display: flex;
-            flex: 0.31 !important;
+            flex: 0.32 !important;
             justify-content: center;
             align-items: center;
-            margin: 0 5px 0 13px;
+            margin: 0 0px 0 1px;
           }
         }
 
@@ -104,8 +104,9 @@
           justify-content: center;
           align-items: center;
           font-size: 14px;
-          width: 52px;
-          height: 48px;
+          width: 42px;
+          height: 38px;
+          margin: 0;
 
           &.border {
             background-color: $lightPrimary;
@@ -116,8 +117,8 @@
 
         .secondary {
           background-color: $lightBlack5;
-          width: 52px;
-          height: 48px;
+          width: 42px;
+          height: 38px;
           font-size: 14px;
           border-radius: 4px;
           display: flex;
@@ -127,8 +128,8 @@
 
         .success {
           background-color: $successLight2;
-          width: 52px;
-          height: 48px;
+          width: 42px;
+          height: 38px;
           font-size: 14px;
           border-radius: 4px;
           display: flex;
@@ -160,6 +161,7 @@
             flex: 1;
             transform: translate(0, -10px);
             text-align: center;
+            margin: 0 2.5px;
           }
         }
 
@@ -174,7 +176,7 @@
           .card_row_1 {
             @extend .card_row;
 
-            width: 98%;
+            width: 99%;
             background-color: $lightBlack;
             box-shadow: 0 5px 10px 2px $lightBlack12;
             padding: 16px 25px;
