--- a/src/ui/Input/Input.scss
+++ b/src/ui/Input/Input.scss
@@ -1,3 +1,5 @@
+@import '../../scss/colors.scss';
+
 .__text-field-style-2 {
   color: #000000;
   margin: 1.1em 0;
@@ -25,6 +27,9 @@
     font-size: inherit;
     outline: none;
     border-radius: 0.3em;
+    &:focus{
+      border-color: $primary;
+    }
   }
 }
 .w-50 {
