--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -405,8 +405,7 @@
       display: flex;
       justify-content: center;
       position: relative;
-      bottom: 30px;
-      margin-top: 130px;
+      margin: 7.43rem 0 8.8571rem 0;
 
       .__home_page_third_section_power_up_btn {
         width: 180px;
