--- a/src/pages/MLBLivePowerdFsScroeDetail/index.module.scss
+++ b/src/pages/MLBLivePowerdFsScroeDetail/index.module.scss
@@ -207,6 +207,12 @@
       flex: 1;
     }
 
+    .container_body_img {
+      width: 100%;
+      height: 100%;
+      margin: 0 0 4em 0;
+    }
+
     .gear_img {
       width: 341px;
       height: 381px;
